Fix collapsed sidebar width

--- a/app/src/components/sidebar/style.sass
+++ b/app/src/components/sidebar/style.sass
@@ -33,6 +33,7 @@
 
   &.collapsed
     min-width: 0
+    width: auto
 
     .sidebar-user-profile
       width: 80%
